<resources>
    <string name="app_name">My Weather App</string>
    <string name="app_location">St.Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feel_like">Feels Like: %1$d° </string>
    <string name="current_low">Low: %1$d°</string>
    <string name="current_high">High: %1$d°</string>
    <string name="current_humidity">Humidity: %1$d%%</string>
    <string name="current_pressure">Pressure: %1$dhPa</string>
    <string name="forecastButton">Forecast</string>
    <string name="title_activity_forecast">ForecastActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="date">Date</string>
    <string name="temp">Temp: </string>
    <string name="high">High: </string>
    <string name="low">Low: </string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset: </string>
    <string name="zip_code">ZIP Code</string>
    <string name="search">Search</string>
    <string name="enter_zip_code">Enter a zip code:</string>
    <string name="ok">Ok</string>
    <string name="notification">Get Notification</string>
    <string name="turn_notification_on">Notification On</string>
    <string name="turn_notification_off">Notification Off</string>
    <string name="notify_location">Location: %1$s</string>
    <string name="notify_currentTemp">Current Temp: %1$d°</string>
    <string name="Request_Location">Get Location</string>
</resources>