<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/current_condition_fragment"
    android:background="@drawable/gradient_animation">


    <TextView
        android:id="@+id/cityName"
        android:layout_width="243dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="142dp"
        android:layout_height="108dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="75sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <ImageView
        android:id="@+id/iconTemp"
        android:layout_width="131dp"
        android:layout_height="132dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/feel_like"
        android:textAlignment="center"
        android:textColor="@color/blue_gray"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/lowTemp"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:layout_marginTop="18dp"
        android:text="@string/current_low"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelsLike" />

    <TextView
        android:id="@+id/highTemp"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:text="@string/current_high"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowTemp" />

    <TextView
        android:id="@+id/huminityTemp"
        android:layout_width="195dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:text="@string/current_humidity"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highTemp" />

    <TextView
        android:id="@+id/pressureTemp"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:text="@string/current_pressure"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/huminityTemp" />

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/blue_gray"
        android:text="@string/forecastButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTemp" />

</androidx.constraintlayout.widget.ConstraintLayout>