<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@null"
        android:src="@drawable/sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="77dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="77dp"
        android:layout_height="23dp"
        android:layout_marginStart="4dp"
        android:text="@string/temp"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/high"
        android:layout_width="61dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/high"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/low"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/low"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/high"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>